[package]
name = "quad-net"
version = "0.1.1"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Miniquad friendly network abstractions"

[features]
default = ["nanoserde", "openssl"]
openssl = ["qws/ssl"]
nativetls = ["qws/nativetls"]

[dependencies]
nanoserde = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
qws = "0.7.9"
ureq = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[dev-dependencies]
nanoserde = { version = "0.1" }
macroquad = { version = "0.3.0-alpha" }
